[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/admob/develop/Example.gd" type="Script" id=1]
[ext_resource path="res://addons/admob/assets/icon-500.png" type="Texture" id=2]
[ext_resource path="res://addons/admob/assets/poing.jpeg" type="Texture" id=3]
[ext_resource path="res://addons/admob/assets/music.ogg" type="AudioStream" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.36377, 0.23226, 0.0795746, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="Theme" id=3]
TabContainer/styles/panel = SubResource( 2 )

[node name="Example" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.541176, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Poing" type="TextureRect" parent="Background"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdMob" type="TextureRect" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -256.0
margin_right = 256.0
margin_bottom = 256.0
texture = ExtResource( 2 )
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Advice" type="RichTextLabel" parent="Background"]
anchor_top = 0.0933333
anchor_right = 1.0
anchor_bottom = 0.222222
custom_styles/normal = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[wave]"
scroll_following = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TabContainer" type="TabContainer" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -81.0
margin_right = 128.0
margin_bottom = 81.0
theme = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdFormats" type="Tabs" parent="Background/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="VBoxContainer" type="VBoxContainer" parent="Background/TabContainer/AdFormats"]
margin_right = 245.0
margin_bottom = 116.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Banner" type="HBoxContainer" parent="Background/TabContainer/AdFormats/VBoxContainer"]
margin_top = 24.0
margin_right = 245.0
margin_bottom = 44.0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1

[node name="EnableBanner" type="Button" parent="Background/TabContainer/AdFormats/VBoxContainer/Banner"]
margin_right = 118.0
margin_bottom = 20.0
disabled = true
text = "ENABLE BANNER"

[node name="DisableBanner" type="Button" parent="Background/TabContainer/AdFormats/VBoxContainer/Banner"]
margin_left = 122.0
margin_right = 245.0
margin_bottom = 20.0
disabled = true
text = "DISABLE BANNER"

[node name="Interstitial" type="Button" parent="Background/TabContainer/AdFormats/VBoxContainer"]
margin_top = 48.0
margin_right = 245.0
margin_bottom = 68.0
disabled = true
text = "INTERSTITIAL"

[node name="Rewarded" type="Button" parent="Background/TabContainer/AdFormats/VBoxContainer"]
margin_top = 72.0
margin_right = 245.0
margin_bottom = 92.0
disabled = true
text = "REWARDED"

[node name="UMP" type="Tabs" parent="Background/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="VBoxContainer" type="VBoxContainer" parent="Background/TabContainer/UMP"]
margin_right = 245.0
margin_bottom = 116.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestUserConsent" type="Button" parent="Background/TabContainer/UMP/VBoxContainer"]
margin_top = 72.0
margin_right = 245.0
margin_bottom = 92.0
disabled = true
text = "REQUEST USER CONSENT"

[node name="ResetConsentState" type="Button" parent="Background/TabContainer/UMP/VBoxContainer"]
margin_top = 96.0
margin_right = 245.0
margin_bottom = 116.0
disabled = true
text = "RESET CONSENT STATE"

[node name="BannerSizes" type="ItemList" parent="Background"]
anchor_left = 0.064
anchor_top = 0.25
anchor_right = 0.936
anchor_bottom = 0.363333
auto_height = true
same_column_width = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="UnifiedNative" type="Panel" parent="Background"]
anchor_left = 0.293962
anchor_top = 0.782665
anchor_right = 0.727962
anchor_bottom = 0.875998
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="pressed" from="Background/TabContainer/AdFormats/VBoxContainer/Banner/EnableBanner" to="." method="_on_EnableBanner_pressed"]
[connection signal="pressed" from="Background/TabContainer/AdFormats/VBoxContainer/Banner/DisableBanner" to="." method="_on_DisableBanner_pressed"]
[connection signal="pressed" from="Background/TabContainer/AdFormats/VBoxContainer/Interstitial" to="." method="_on_Interstitial_pressed"]
[connection signal="pressed" from="Background/TabContainer/AdFormats/VBoxContainer/Rewarded" to="." method="_on_Rewarded_pressed"]
[connection signal="pressed" from="Background/TabContainer/UMP/VBoxContainer/RequestUserConsent" to="." method="_on_RequestUserConsent_pressed"]
[connection signal="pressed" from="Background/TabContainer/UMP/VBoxContainer/ResetConsentState" to="." method="_on_ResetConsentState_pressed"]
[connection signal="item_selected" from="Background/BannerSizes" to="." method="_on_BannerSizes_item_selected"]
